--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "node src/demo.js"
+    "test": "tsc && node dist/demo.js"
   },
   "keywords": [],
   "author": "",
@@ -23,5 +23,11 @@
     "helia": "^5.3.0",
     "libp2p": "^2.8.2",
     "mocha": "^11.1.0"
+  },
+  "devDependencies": {
+    "@types/chai": "^5.2.1",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.14.0",
+    "ts-node": "^10.9.2"
   }
 }
