--- a/.github/workflows/replication-test.yml
+++ b/.github/workflows/replication-test.yml
@@ -6,30 +6,15 @@ on:
     branches: [ main ]
 
 jobs:
-  basic-replication-test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 'lts/*'
-      - name: Install Dependencies
-        run: npm ci
-      - name: Run Basic Replication Test
-        run: node src/replication-test.js
-
   multi-peer-replication-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 'lts/*'
-      - name: Install Dependencies
-        run: npm ci
+      - uses: oven-sh/setup-bun@v2
+      - run: bun install
       - name: Start Peer 1
-        run: node src/peer1.js &
+        run: bun run src/peer1.js &
       - name: Wait for Peer 1 to start
         run: sleep 5
       - name: Start Peer 2
-        run: node src/peer2.js
+        run: bun run src/peer2.js
