--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "tsc && node dist/demo.js"
+    "test": "bun test"
   },
   "keywords": [],
   "author": "",
@@ -19,15 +19,10 @@
     "@libp2p/tcp": "^10.1.8",
     "@orbitdb/core": "^2.5.0",
     "blockstore-level": "^2.0.1",
-    "chai": "^5.2.0",
     "helia": "^5.3.0",
-    "libp2p": "^2.8.2",
-    "mocha": "^11.1.0"
+    "libp2p": "^2.8.2"
   },
   "devDependencies": {
-    "@types/chai": "^5.2.1",
-    "@types/mocha": "^10.0.10",
-    "@types/node": "^22.14.0",
-    "ts-node": "^10.9.2"
+    "@types/node": "^22.14.0"
   }
 }
