--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,27 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "esnext",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    // Environment setup & latest features
+    "lib": ["ESNext"],
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleDetection": "force",
+    "allowJs": true,
+
+    // Bundler mode
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "verbatimModuleSyntax": true,
+    "noEmit": true,
+
+    // Best practices
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "dist",
-    "typeRoots": ["src/types"]
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+
+    // "esModuleInterop": true,
+    // "forceConsistentCasingInFileNames": true,
+    // "typeRoots": ["./node_modules/bun-types", "src/types"],
   },
   "include": ["src/**/*.ts", "src/types/**/*.d.ts"],
   "exclude": ["node_modules"]
