--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orbitdb-custom-store-tests",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -19,9 +19,11 @@
     "@libp2p/tcp": "^10.1.8",
     "@orbitdb/core": "^2.5.0",
     "blockstore-level": "^2.0.1",
-    "chai": "^5.2.0",
     "helia": "^5.3.0",
     "libp2p": "^2.8.2",
     "mocha": "^11.1.0"
+  },
+  "devDependencies": {
+    "chai": "^5.2.0"
   }
 }
