--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "@orbitdb/core": "^2.5.0",
     "blockstore-level": "^2.0.1",
     "helia": "^5.3.0",
-    "libp2p": "^2.8.2",
-    "mocha": "^11.1.0"
+    "libp2p": "^2.8.2"
   },
   "devDependencies": {
     "chai": "^5.2.0"
