--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chainsafe/libp2p-gossipsub": "^14.1.1",
     "@chainsafe/libp2p-noise": "^16.1.0",
     "@chainsafe/libp2p-yamux": "^7.0.1",
+    "@helia/dag-cbor": "^4.0.3",
     "@libp2p/identify": "^3.0.27",
     "@libp2p/mdns": "^11.0.32",
     "@libp2p/tcp": "^10.1.8",
@@ -21,8 +22,5 @@
     "blockstore-level": "^2.0.1",
     "helia": "^5.3.0",
     "libp2p": "^2.8.2"
-  },
-  "devDependencies": {
-    "chai": "^5.2.0"
   }
 }
