--- a/.github/workflows/orbitdb-test.yml
+++ b/.github/workflows/orbitdb-test.yml
@@ -17,9 +17,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
-
-      - name: Install dependencies
-        run: npm install
+      - run: npm ci
 
       - name: Cache OrbitDB data
         uses: actions/cache/restore@v4
