--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chainsafe/libp2p-noise": "^16.1.0",
     "@chainsafe/libp2p-yamux": "^7.0.1",
     "@helia/dag-cbor": "^4.0.3",
+    "@libp2p/dcutr": "^2.0.28",
     "@libp2p/identify": "^3.0.27",
     "@libp2p/mdns": "^11.0.32",
     "@libp2p/tcp": "^10.1.8",
