Refactor Libp2pOptions

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@helia/dag-cbor": "^4.0.3",
     "@libp2p/dcutr": "^2.0.28",
     "@libp2p/identify": "^3.0.27",
+    "@libp2p/kad-dht": "^15.0.0",
     "@libp2p/mdns": "^11.0.32",
+    "@libp2p/ping": "^2.0.28",
     "@libp2p/tcp": "^10.1.8",
     "@orbitdb/core": "^2.5.0",
     "blockstore-level": "^2.0.1",
