--- a/package.json
+++ b/package.json
@@ -13,14 +13,10 @@
   "dependencies": {
     "@chainsafe/libp2p-gossipsub": "^14.1.1",
     "@chainsafe/libp2p-noise": "^16.1.0",
+    "@chainsafe/libp2p-quic": "^1.1.1",
     "@chainsafe/libp2p-yamux": "^7.0.1",
     "@helia/dag-cbor": "^4.0.3",
-    "@libp2p/dcutr": "^2.0.28",
-    "@libp2p/identify": "^3.0.27",
-    "@libp2p/kad-dht": "^15.0.0",
-    "@libp2p/mdns": "^11.0.32",
-    "@libp2p/ping": "^2.0.28",
-    "@libp2p/tcp": "^10.1.8",
+    "@libp2p/kad-dht": "^14.2.3",
     "@orbitdb/core": "^2.5.0",
     "blockstore-level": "^2.0.1",
     "dotenv": "^16.5.0",
