fix: add environment variable for ORBITDB_ADDRESS in workflow

--- a/.github/workflows/orbitdb-test.yml
+++ b/.github/workflows/orbitdb-test.yml
@@ -3,9 +3,13 @@ name: OrbitDB Test
 on:
   push:
   workflow_dispatch:
+  # run every 6 hours
+  schedule:
+    - cron: '0 */6 * * *'
 
-env:
-  ORBITDB_ADDRESS: /orbitdb/zdpuAtC9rFwpYrjeoZF6oqdhMmDT6sooqWxYBqiZ3iZdbqfRN
+# TODO:
+# env:
+#   ORBITDB_ADDRESS: /orbitdb/zdpuAtC9rFwpYrjeoZF6oqdhMmDT6sooqWxYBqiZ3iZdbqfRN
 
 jobs:
   test:
@@ -13,10 +17,6 @@ jobs:
     timeout-minutes: 100
 
     steps:
-      - name: Log envs
-        run: |
-          echo "ORBITDB_ADDRESS=$ORBITDB_ADDRESS"
-
       - uses: actions/checkout@v4
 
       - name: Setup Node.js
