--- a/.github/workflows/replication-test.yml
+++ b/.github/workflows/replication-test.yml
@@ -1,9 +1,8 @@
 name: OrbitDB Replication Tests
 
 on:
-  push:
   pull_request:
-    branches: [ main ]
+    branches: [ dev ]
 
 jobs:
   basic-replication-test:
