--- a/.github/workflows/orbitdb-test.yml
+++ b/.github/workflows/orbitdb-test.yml
@@ -1,6 +1,7 @@
 name: OrbitDB Test
 
 on:
+  push:
   workflow_dispatch:
     inputs:
       debug_enabled:
@@ -8,9 +9,9 @@ on:
         description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)'
         required: false
         default: false
-  # run every 6 hours
-  schedule:
-    - cron: '0 */6 * * *'
+  # TODO: run every 6 hours
+  # schedule:
+  # - cron: '0 */6 * * *'
 
 # TODO:
 # env:
@@ -45,6 +46,11 @@ jobs:
         # ipfs cat ${{ steps.ipfs_setup.outputs.welcome_ref }}/readme
         curl -sX POST http://localhost:5001/api/v0/version | jq -e .
         curl -sX POST http://localhost:5001/api/v0/version | jq -e '(.Version=="${{ steps.ipfs_setup.outputs.resolved_ipfs_version }}")'
+    
+    - name: Test IPFS file retrieval with 'ipfs get'
+      shell: bash
+      run: ipfs get bafybeifaimvnz2fi5duvcetbrqaj3ftt4lgt3rnnv56npt6svlh3czbewa
+    
     # Enable tmate debugging of manually-triggered workflows if the input option was provided
     - name: Setup tmate session
       # TODO: uncomment this `if` condition when merging into the default branch
