--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@helia/dag-cbor": "^4.0.3",
     "@libp2p/kad-dht": "^14.2.3",
     "@orbitdb/core": "^2.5.0",
+    "@orbitdb/voyager": "^0.0.3",
     "blockstore-level": "^2.0.1",
     "dotenv": "^16.5.0",
     "helia": "^5.3.0",
