--- a/.github/workflows/replication-test.yml
+++ b/.github/workflows/replication-test.yml
@@ -26,11 +26,12 @@ jobs:
       with:
         node-version: 'lts/*'
 
-    - name: Install Voyager CLI
-      run: npm i -g @orbitdb/voyager
+    - name: Install Dependencies
+      run: npm ci
+
     - name: Start Voyager Daemon (Background)
       run: |
-        voyager daemon -p 54320 -w 55440 -v --allow > voyager.log 2>&1 &
+        npx voyager daemon -p 54320 -w 55440 -v --allow > voyager.log 2>&1 &
         echo "Wait for Voyager to start" && sleep 15
     - name: Get Voyager Address
       id: voyager-address
@@ -44,9 +45,6 @@ jobs:
           exit 1
         fi
         echo "address=$address" >> $GITHUB_OUTPUT
-  
-    - name: Install Dependencies
-      run: npm ci
 
     - name: Start Peer 1
       env:
